# gelux-os

./: README.md  ddcxinfo-knoppix  publishdeb
gelux-artwork/debian/: changelog  control  files  gelux-artwork.postinst  rules
gelux-artwork/icons/Human/: index.theme
gelux-artwork/usr/share/gnome-wallpaper-properties/: gelux-wallpapers.xml
gelux-gnome-control-center/debian/: changelog  control  files  gelux-gnome-control-center.postinst  rules
gelux-gnome-control-center/debian/gelux-gnome-control-center/DEBIAN/: control  md5sums
gelux-installer/: .classpath  .project  AUTHORS  ChangeLog  INSTALL  Makefile  Makefile.am  Makefile.in  NEWS  aclocal.m4  autogen.sh  config.status  configure.ac  gelux-installer  server.unimod
gelux-installer/data/: Makefile  Makefile.am  Makefile.in  debian-installer.desktop  debian-installer.glade.bak  debian-post-install.sh  node-installer.desktop  node-installer.glade  node-post-install.sh
gelux-installer/debian/: changelog  control  files  gelux-node-installer.substvars  rules
gelux-installer/m4/: ac_cxx_enable_optimize.m4  ac_cxx_flags_preset.m4  am_install_mode.m4  am_path_docbook.m4  am_path_gcj.m4  jg_check_nativecompile.m4  jg_common.m4  jg_glade_java.m4  jg_gnome_java.m4  jg_gtk_java.m4  jg_parted_java.m4
gelux-installer/src/org/programmers/installer/: Admin.java  DetectPartitions.java  FS.java  Grub.java  InstallBase.java  InstallException.java  InstallListener.java  InstallRunner.java  User.java
gelux-installer/src/org/programmers/installer/gui/: NodeInstaller.java
gelux-installer/src/org/programmers/installer/type/: DebianInstall.java  StatelessInstall.java
gelux-live/: gelux-initrd-maker.sh  linuxrc  nfsrc
gelux-live/bootsplash/animations/: bounce.mng
gelux-live/bootsplash/config/: animations.cfg  bootsplash-1024x768.cfg  bootsplash2-1024x768.cfg  bootsplash3-1024x768.cfg  bootsplash4-1024x768.cfg  bootsplash5-1024x768.cfg
gelux-live/etc/: filesystems  hosts
gelux-live/etc/gelux.d/: color.sh  functions.sh  load-minimodules.sh  locales.sh
gelux-live/specs/: gelux-kernel.spec  gelux-live.spec  gelux-media.spec  gelux-regression.spec  glx.spec
gelux-live/usr/sbin/: mount-module
gelux-main-conf/debian/: changelog  control  files  gelux-main-conf.postinst  gelux-nis-conf.postinst  rcsplash  rules
gelux-main-conf/debian/gelux-main-conf/DEBIAN/: conffiles  control  md5sums
gelux-main-conf/debian/gelux-nis-conf/DEBIAN/: conffiles  control  md5sums
gelux-main-conf/debian/gelux-samba-conf/DEBIAN/: control  md5sums
gelux-main-conf/debian/gelux-server-conf/DEBIAN/: control  md5sums
gelux-main-conf/etc/gelux.d/: .#05aptsources.default  .#08geluxd.default  .#08ifplugd.default  .#99prelink.default  01shadow.default  02passwd.default  03gdm.default  05pam_nullok.default  06autoapt.default  07splashrc.default  20nis.default
gelux-main-conf/etc/kde3/: kdeglobals
gelux-main-init/: main_module  make_server_symlinks.sh  make_worstation_symlinks.sh
gelux-main-init/debian/: changelog  control  files  rules
gelux-main-init/debian/gelux-main-init/DEBIAN/: control  md5sums
gelux-main-init/debian/gelux-main-init/morphix/: loadmod.sh  strip-apt
gelux-main-init/debian/gelux-nis-init/DEBIAN/: control  md5sums
gelux-main-init/debian/gelux-samba-init/DEBIAN/: control  md5sums
gelux-main-init/debian/gelux-server-init/DEBIAN/: control  md5sums
gelux-main-init/debian/gelux-server-init/morphix/: include.sh  init.sh
gelux-main-init/init.d/: X11-shutdown  X11-wait  console  dbus  exitshell  gelux-daemon  hald  udev
gelux-makeids/: makeids
gelux-meta-packages/: basemod-2.6.13.xml  basemodule.xml  gelux-devel.xml  gelux-gnome.xml  gelux-guibase.xml  gelux-media.xml  gelux-server.xml  gelux-ubuntu-office.xml  gelux-xfce.xml
gelux-meta-packages/basemod-2.6.13_files/: a.
gelux-meta-packages/debian/: changelog  control  files  rules
gelux-meta-packages/debian/gelux-meta-base/DEBIAN/: control  md5sums
gelux-patch/debian/: changelog  control  files  gelux-patch.postinst  rules
gelux-patch/debian/tmp/DEBIAN/: control  (+1 more)
gelux-server-conf/debian/: changelog  control  files  gelux-server-conf.postinst  rules
gelux-server-conf/etc/X11/: XF86Config.in
live-backends/: changelog
live-backends/common/: common.include
live-backends/common/conf.d/: 02passwd.default  04alsa.default  09user.default
live-backends/debian/: backend.include  profile  update-env
live-backends/debian/conf.d/: 10initrc.default  10locales.default  10ntpdate.default  11shadow.ibuild  12network.default  13gdm.default  14gdm-key.default  15pam_nis.default  15pam_nullok.default  16javajni.default  17splashrc.default  18cleanmount.default  20nis.ibuild  30mono.default  40gnome-nm.ibuild  89startx.default
live-backends/debian/qt3/: kstylerc
live-backends/etc/X11/: XF86Config-4.in  xorg-radeon.options  xorg.conf.in  xprobe.conf
live-backends/etc/gelux.d/: stateless-functions.sh
live-backends/fedora/: backend.include  update-env
live-backends/gentoo/: backend.include  rc  update-env
live-backends/gentoo/conf.d/: 10initrc.default  10locales.default  12network.default  88freevo.default  89startx.default
live-backends/sbin/: alsasound  lcdsize.sh  mkxf86config  mouseconfig  rebuildfstab  scanpartitions  xprobe.sh
live-backends/suse/: backend.include  update-env
scripts-main/DEBIAN/: changelog  control  copyright  dirs  postinst  rules
scripts-main/morphix/: init.sh  loadmod.sh  main_module  make_symlinks.sh  strip-apt
scripts-main/morphix/init.d/: X11-setup  X11-shutdown  X11-startx  X11-wait  basemodule  console  cups  drm  exitshell  gdm  hald  shutdown  sudoers
scripts-main/morphix/rc.m/: S99exitshell
win32-setup/: Changelog  closeboot.cmd  createfs.sh  gelux-grub.iss  gelux.iss  grub-ntfs.txt  openboot.cmd
win32-setup/boot/boot/: stage1  stage2
(+93 files in other folders)
